# niffler-py-st3

niffler-e-2-e-tests/: .env  README.md  config.py  conftest.py  pyproject.toml
niffler-e-2-e-tests/pages/: base_page.py  login_page.py  profile_page.py
niffler-e-2-e-tests/tests/: test_auth.py  test_profile.py  test_spending.py
