[project]
name = "niffler-e-2-e-tests"
version = "0.1.0"
description = ""
authors = [
    {name = "daniil",email = "dt.bedrin@interfax.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=38.2.0,<39.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
faker = "^38.2.0"

